tests/spec/lex/snapshots/raw_string_empty.snap
---
source: tests/spec/lex/mod.rs
description: "input: ``"
---
LexResult {
    tokens: [
        Token {
            kind: Backtick,
            text: "``",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 2,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
