tests/spec/lex/snapshots/raw_string_multiline.snap
---
source: tests/spec/lex/mod.rs
assertion_line: 982
description: "input: r\"a\nb\""
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"a\nb\"",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
