tests/spec/lex/snapshots/raw_string_multiline_simple.snap
---
source: tests/spec/lex/mod.rs
assertion_line: 862
description: "input: r\"line1\nline2\""
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"line1\nline2\"",
            byte_offset: 0,
            byte_length: 14,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 14,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
