tests/spec/lex/snapshots/raw_string_multiline_unterminated_eof.snap
---
source: tests/spec/lex/mod.rs
assertion_line: 868
description: "input: r\"abc\ndef"
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"abc\ndef",
            byte_offset: 0,
            byte_length: 9,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 9,
            byte_length: 0,
        },
    ],
    errors: [
        ParseError {
            message: "Unterminated raw string literal",
            labels: [
                (
                    Span {
                        file_id: 0,
                        byte_offset: 0,
                        byte_length: 9,
                    },
                    "raw string not closed",
                ),
            ],
            help: Some(
                "Add a closing double quote",
            ),
            note: None,
            code: "lex.unterminated_raw_string",
        },
    ],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
