tests/spec/lex/snapshots/raw_string_simple.snap
---
source: tests/spec/lex/mod.rs
description: "input: `hello world`"
---
LexResult {
    tokens: [
        Token {
            kind: Backtick,
            text: "`hello world`",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    trivia: Trivia {
        comments: [],
        doc_comments: [],
        blank_lines: [],
    },
}
